upgrade at the latest git version and rebuild against gtk3

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxrandr-0.3.2.tar.xz: a76b3d79ab1d5aa974a2ad25b1882685159a2e98
+  lxrandr-a78873f6727a826423eab55be1e4edb69f660cdf.tar.gz: 7f51d72c1513d56fd40350423852270414ffede2
