--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxrandr-744715450dbd6d11da9e4585a093ddb55faac976.tar.gz: 928275a5a189dc09e73320117c0ce62a33faa071
+  lxrandr-0.3.3.tar.gz: 8d93c51c9cdcb22851ea9e0e2e5cbd625b26195c
